[project]
name = "dnscrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
]

[tool.poetry.scripts]
organize = "organize_pdfs:organize_pdfs"
